hsreplaynet/static/styles/deck_detail.scss
.deck-detail-container {
	display: flex;

	@media (max-width: 768px) {
		flex-direction: column;
	}

	> main {
		min-height: calc(100vh - 50px);
		padding-top: 10px;
		width: calc(100% - 300px);
		display: flex;
		flex-direction: column;

		@media (max-width: 768px) {
			max-width: 100%;
			width: 100%;
		}

		> .row {
			border-bottom: 1px solid $lightgrey;
		}

		.chart-wrapper > .info-icon {
			color: $blue;
			font-size: 1em;
			left: 3%;
			@media (min-width: 1336px) {
				left: calc(50% - 350px);
			}
			padding: 0;
			position: absolute;
			right: unset;
			top: 5%;
		}

		#page-content {
			flex-grow: 1;
		}

		#overview {
			.overview-content {
				display: flex;
			}

			> div > div {
				padding-top: 20px;
			}

			table {
				max-width: 350px;
				margin: 0 auto;
				font-weight: bold;
			}

			.card-list-wrapper {
				max-width: 270px;
				min-width: 200px;
				margin: 0 auto;
			}

			.chart-wrapper {
				max-width: 450px;
			}

			.mana-curve {
				padding: 50px 0 110px calc(50% - 125px + 17px);
				border: none;

				li {
					padding: 0;
					border: none;
					height: 75px;
					width: 25px;
					margin-left: 2px;

					> span::before {
						content: attr(data-count);
						left: -1px;
						position: absolute;
						top: -1.5em;
						width: 100%;
					}

					> span {
						border-bottom: 1px solid $lightblue;
						font-size: 0.8em;
						font-weight: bold;
						text-align: center;
						transition: height 0.5s ease-out;
					}

					> span::after {
						background-image: url("/static/images/mana_crystal.png");
						background-repeat: no-repeat;
						background-size: contain;
						background-position: center;
						content: attr(data-cost);
						filter: brightness(1.1);
						left: -1px;
						padding: 4px;
						position: absolute;
						top: calc(100% + 3px);
						width: 100%;
						color: rgba(255, 255, 255, 0.8);
						text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,
							-1px 1px 0 #000, 1px 1px 0 #000;
					}
				}
			}
		}

		#vods {
			.twitch-vod-container {
				display: flex;
				flex-direction: row;

				@media (max-width: 768px) {
					flex-direction: column;
					border-left: 0;
				}

				.twitch-vod-table {
					> ul {
						padding-left: 0;

						> li {
							padding: 9px 15px 9px 15px;
							cursor: pointer;
							list-style-type: none;
							border: solid 1px rgba(0, 0, 0, 0.1);
							border-radius: 1px;
							margin: 5px;
							background-color: white;

							&:hover,
							&:focus {
								background-color: #eee;
							}

							&.active {
								background-color: #ddd;
							}

							p {
								width: 100%;
								margin: 4px 0;
								padding: 0;
							}

							&.won {
								border-left: 3px solid green;

								.twitch-vod-table-outcome .glyphicon {
									color: green;
								}
							}

							&.lost {
								border-left: 3px solid red;

								.twitch-vod-table-outcome .glyphicon {
									color: red;
								}
							}

							.twitch-vod-table-inline-icon,
							.rank-icon {
								height: 1.2em;
								width: 1.2em;
							}

							.twitch-vod-table-outcome {
								.glyphicon {
									font-weight: normal;
								}
							}

							.opposing-archetype {
								font-weight: bold;
							}

							.vs-icon {
								width: 16px;
								height: 16px;
								margin: 0 10px;
							}
						}
					}

					.twitch-vod-table-filterables {
						margin: 10px 10px 0 10px;

						& > .optional-select {
							margin: 0 0.3em;

							&:first-child {
								margin-left: 0;
							}

							&:last-child {
								margin-right: 0;
							}
						}
					}

					.twitch-vod-table-sortables {
						margin: 0 10px;
						display: flex;
						flex-direction: row;
						justify-content: space-between;

						.twitch-vod-table-sortable {
							display: inline-block;
							cursor: pointer;
							flex-grow: 1;

							padding: 0.5em 0.5em;
							margin: 0.5em 0 0 0;

							&:first-child {
								padding-left: 1px;
							}

							&:last-child {
								padding-right: 0;
							}
						}
					}

					.twitch-vod-table-reset-section {
						margin-top: 4em;

						.btn {
							font-weight: bold;
						}
					}
				}

				.twitch-vod-main {
					flex-grow: 1;
					padding: 10px 10px 10px;
				}

				.twitch-iframe-container {
					margin: 0 auto;
					max-width: 900px;
					max-height: calc(800px * 9 / 16 + 100px);
					display: flex;
					justify-content: center;
					align-items: center;
				}

				.vod-ad-container {
					margin-top: 10px;
					display: flex;
					justify-content: center;
				}

				iframe {
					background: black;
				}

				.pick-a-vod {
					font-size: 1.25em;
				}

				.table-container {
					max-width: 1200px;
					margin: 0 auto;

					.table-row-header,
					.table-cell {
						cursor: pointer;
					}

					.table-row-header {
						line-height: 36px;
					}

					.table-cell {
						color: black;
					}
				}

				.stream-info {
					display: flex;
					flex-direction: column;
					text-align: right;
					float: right;
				}

				time {
					color: $darkgrey;
					float: right;
				}

				.twitch-channel-name {
					a.text-twitch {
						&,
						&:active,
						&:hover {
							color: $twitch-purple;
						}
					}
				}

				.twitch-vod-channel-name {
					font-weight: bold;
					margin-left: 5px;

					> img {
						margin-top: -0.15em;
					}
				}

				.twitch-vod-table-matchup {
					display: flex;
					flex-direction: row;
					align-items: center;

					.class-icon {
						width: 28px;
						height: 28px;
						border-radius: 50%;
						border: solid 1px #555;
						margin-right: 6px;
					}

					.rank-icon-standalone {
						height: 38px;
						width: 38px;
						margin: -4px;

						> figcaption {
							font-size: 1em;
						}
					}
				}
			}
		}
	}

	> aside {
		.hero-image {
			margin: 25px calc(50% - 125px);
			width: 250px;
		}

		@media (max-width: 768px) {
			max-width: 100%;
			width: 100%;
			padding-bottom: 0;
		}

		.card-list {
			width: 270px;
			margin: 20px auto;
		}

		.copy-deck-wrapper + h2 {
			margin-top: 20px;
		}

		.dropdown {
			> button {
				padding: 0 5px;
			}

			li {
				padding: unset;
				&.dropdown-header {
					padding: 3px 20px;
				}
			}
		}
	}

	.chart-wrapper {
		max-width: 700px;
		margin: 0 auto;
	}

	.chart-column {
		padding-left: 0;
		padding-right: 0;
	}

	> h3 {
		border-bottom: 1px solid $darkgrey;
	}

	.table-wrapper {
		overflow-x: auto;

		> table {
			min-width: 1050px;
		}
	}

	#my-statistics {
		table {
			min-width: 1900px;
		}
	}

	.replay-count {
		display: block;
		color: gray;
		font-style: italic;
		margin: -10px 0 0 5px;
	}

	#message-no-data {
		padding-top: 20px;
	}

	.deck-matchups {
		margin: 20px auto 0 auto;
		max-width: 1000px;
	}
}

.card-table-row {
	> td {
		line-height: 19px;
		font-weight: bold;

		&.winrate-cell {
			white-space: pre;

			.glyphicon {
				padding-left: 10px;
				color: orangered;
			}
		}
	}
}

